<resources>
    <string name="app_name">Servpro</string>

    <!-- Client Info -->
    <string name="s_client_name">Client Name</string>
    <string name="s_phone">Phone</string>
    <string name="s_service_requested">Service Requested</string>
    <string name="s_headline">Headline</string>
    <string name="s_body">Body</string>
    <string name="s_accept">Accept</string>
    <string name="s_address">Address</string>
    <string name="s_city">City</string>
    <string name="s_postal">Postal</string>
    <string name="s_line_2">Line 2</string>
    <string name="s_line_1">Line 1</string>
    <string name="s_reject">Reject</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_main_screen">Main_screen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_request">Request</string>
</resources>
