<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ClientInfo">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/sky_blue">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/client_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher_round"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/edit_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/ic_launcher_round"
                android:padding="8dp"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Company name"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/client_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Phone"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@id/company_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@android:color/darker_gray"
        android:orientation="vertical">

            <TextView
                android:text="@string/s_service_requested"
                style="@style/Service_requested_header_style" />
                <LinearLayout style="@style/Service_request_layout_style"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginStart="@dimen/horizontal_margin_8"
                    android:layout_marginEnd="@dimen/horizontal_margin_8"
                    android:layout_marginBottom="@dimen/vertical_margin_8">

                <EditText
                    android:hint="@string/s_headline"
                    style="@style/Edit_text_style"
                    android:background="@android:color/transparent"
                   />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/teal"
                        />

                    <EditText
                        android:padding="@dimen/vertical_padding_8"
                        android:hint="@string/s_body"
                        android:gravity="start"
                        android:layout_marginBottom="@dimen/vertical_margin_8"
                        style="@style/Edit_text_style.fixedHeight"
                        android:background="@android:color/transparent"
                        />

            </LinearLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin_8"
                    android:layout_marginEnd="@dimen/horizontal_margin_8"
                    android:layout_gravity="end">

                    <Button
                        android:id="@+id/client_request_reject"
                        android:layout_alignParentEnd="true"
                        android:text="@string/s_reject"
                        style="@style/Client_info_button" />

                    <Button
                        style="@style/Client_info_button"
                        android:id="@+id/client_request_accept"
                        android:layout_toStartOf="@+id/client_request_reject"
                        android:text="@string/s_accept" />
                </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            android:orientation="vertical">

            <TextView
                android:text="@string/s_address"
                style="@style/Address_text_view" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        style="@style/Address_info_layout_style">

                        <TextView
                            android:text="@string/s_line_1"
                            style="@style/Address_info_text_view_style" />

                        <EditText style="@style/Address_info_edit_text_style" />

                    </LinearLayout>
                    <LinearLayout
                        style="@style/Address_info_layout_style">

                        <TextView
                            style="@style/Address_info_text_view_style"
                            android:text="@string/s_line_2" />

                        <EditText
                            style="@style/Address_info_edit_text_style"/>            </LinearLayout>
                    <LinearLayout
                        style="@style/Address_info_layout_style">

                        <TextView
                            style="@style/Address_info_text_view_style"
                            android:text="@string/s_postal"
                            />

                        <EditText
                            style="@style/Address_info_edit_text_style" />
                    </LinearLayout>
                    <LinearLayout style="@style/Address_info_layout_style">

                        <TextView
                            style="@style/Address_info_text_view_style"
                            android:text="@string/s_city" />

                        <EditText style="@style/Address_info_edit_text_style.margin16" />
                    </LinearLayout>

                </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
</ScrollView>